<resources>
    <string name="app_name">Deutschland App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_geodata">Geo Data</string>
    <string name="prompt_password">Enter PIN</string>
    <string name="action_sign_in">Sign in</string>
    <string name="invalid_password">PIN must be 4 characters long</string>
    <string name="welcome_username">Welcome %s!</string>


    <string name="menu_mailbox">Mailbox</string>
    <string name="menu_law_registry">Law Registry</string>
    <string name="menu_signature">File Signer</string>
    <string name="menu_data_safe">Data Safe</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_applications">Applications</string>
    <string name="menu_finder">Admin. Service Finder</string>
    <string name="log_out">Log out</string>
    <string name="switch_account">Switch Account</string>
    <string name="switch_language">Switch Language</string>
    <string name="administrative_service">Administrative Service</string>
    <string name="label_placeholder">Label</string>
    <string name="submit">Submit</string>
    <string name="register">Next</string>
    <string name="add_account">Add Account</string>
    <string name="set_pin_message">Set your PIN</string>
    <string name="welcome_dashboard">Welcome %s!</string>
    <string name="address_dashboard">%s, %s</string>
    <string name="account_id_dashboard">ID: %s</string>
    <string name="dashboard_appointments_title">Appointments</string>
    <string name="dashboard_applications_title">Applications</string>
    <string name="dashboard_emergencies_title">Emergencies</string>
    <string name="add_file">New File</string>
    <string name="please_select_an_object">No object selected</string>
    <string name="selected_object">Currently displayed: %s</string>
    <string name="sign_uploaded_locally">Sign and save locally</string>
    <string name="sign_uploaded_data_safe">Sign and save in the Data Safe</string>
    <string name="upload_from_data_safe">Upload from Data Safe</string>
    <string name="upload_from_storage">Upload from local storage</string>
    <string name="citizen_type_register">Citizen</string>
    <string name="company_type_register">Company</string>
    <string name="invalid_account_id">Account ID must contain at least 5 characters</string>
    <string name="enter_citizen_type">Citizen ID</string>
    <string name="enter_company_type">Company ID</string>
    <string name="empty_accounts">¯\\_(ツ)_/¯</string>
    <string name="prompt_pin">4-digit PIN</string>
    <string name="register_failed_message">Failure:\n %s</string>
    <string name="try_again_register_failed_button">Try again</string>
    <string name="set_pin_for_account_register_successful">Set PIN for the account</string>
    <string name="register_successful_message">Successful</string>
    <string name="note_additional_info">Note: %s</string>
    <string name="status_placeholder">%s</string>
    <string name="postal_code_city_prompt">City</string>
    <string name="admin_service_prompt">Administrative Service</string>
    <string name="search_for_geo_prompt">Search for geodata objects…</string>
    <string name="your_position_is">Your Position: %s</string>
    <string name="form_submitted_successfully">Form submitted successfully</string>
    <string name="form_submitted_details">%s\nApplication ID: %s \nSent: %s \nName: %s \nAccount ID: %s</string>
    <string name="form_finish_submitted">Finish submission</string>
    <string name="appointment_address_format">%s, %s, %s</string>
    <string name="geo_search_tab">Search</string>
    <string name="get_map_tab">Map</string>
    <string name="select_data_safe_dialog">Pick a file from Data Safe</string>
    <string name="select_language_dialog">Choose a language</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="language_en">English</string>
    <string name="language_de">Deutsch</string>
    <string name="language_uk">Українська</string>
    <string name="file_context_download">Download</string>
    <string name="file_context_remove">Remove</string>
    <string name="notify_new_law">A new law has been registered</string>
    <string name="notify_emergency_high">ATTENTION: %s</string>
    <string name="notify_emergency_medium">WARNING: %s</string>
    <string name="notify_emergency_low">Careful: %s</string>
    <string name="application_sent">SENT</string>
    <string name="application_verification">VERIFICATION</string>
    <string name="application_processing">PROCESSING</string>
    <string name="application_done">DONE</string>
    <string name="application_rejected">REJECTED</string>
    <string name="notify_appointment">%s appointments</string>
    <string name="notify_appointment_title">Upcoming appointment in %d days!</string>
    <string name="notify_appointment_text">Appointment on %s!</string>
    <string name="notify_application">%s applications</string>
    <string name="notify_application_title">Update of an application status!</string>
    <string name="notify_application_text">Current status: %s</string>
    <string name="notify_mail">%s mails</string>
    <string name="notify_mail_title">You have a new mail message!</string>
    <string name="notify_mail_text">From: %s on %s</string>
</resources>