<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="de.app.ui.dashboard.DashboardFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_dashboard">
    </fragment>

    <fragment
        android:id="@+id/nav_finder"
        android:name="de.app.ui.finder.AdministrativeServiceFinderFragment"
        android:label="@string/menu_finder"
        tools:layout="@layout/fragment_administrative_service_finder">
        <action
            android:id="@+id/action_nav_finder_to_nav_admin_service"
            app:destination="@id/nav_admin_service"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_mailbox"
        android:name="de.app.ui.mailbox.MailBoxFragment"
        android:label="@string/menu_mailbox"
        tools:layout="@layout/fragment_mail_box_list" />

    <fragment
        android:id="@+id/nav_applications"
        android:name="de.app.ui.application.ApplicationFragment"
        android:label="@string/menu_applications"
        tools:layout="@layout/fragment_application" />

    <fragment
        android:id="@+id/nav_appointments"
        android:name="de.app.ui.appointment.AppointmentFragment"
        android:label="@string/menu_appointments"
        tools:layout="@layout/fragment_appointment" />

    <fragment
        android:id="@+id/nav_data_safe"
        android:name="de.app.ui.safe.DataSafeFragment"
        android:label="@string/menu_data_safe"
        tools:layout="@layout/fragment_data_safe" />

    <fragment
        android:id="@+id/nav_signature"
        android:name="de.app.ui.signature.DataSignatureFragment"
        android:label="@string/menu_signature"
        tools:layout="@layout/fragment_signature" />

    <fragment
        android:id="@+id/nav_geodata"
        android:name="de.app.ui.geo.GeoDataFragment"
        android:label="@string/menu_geodata"
        tools:layout="@layout/fragment_geo_data" />

    <fragment
        android:id="@+id/nav_law_registry"
        android:name="de.app.ui.law.LawRegistryFragment"
        android:label="@string/menu_law_registry"
        tools:layout="@layout/fragment_law_registry" />

    <fragment
        android:id="@+id/nav_admin_service"
        android:name="de.app.ui.service.AdministrativeServiceFragment"
        android:label="@string/administrative_service"
        tools:layout="@layout/fragment_administrative_service">
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>
</navigation>